--- a/css/index.css
+++ b/css/index.css
@@ -96,7 +96,7 @@ p {
   line-height: 100px;
   text-align: center;
   display: inline-block;
-  background: url(../img/index_img/icon-nav.png) no-repeat;
+  background: url(http://ic.game.com/img/index_img/icon-nav.png) no-repeat;
   background-position-x: 14px;
   background-position-y: 48px;
   transition: all 1s;
@@ -214,7 +214,9 @@ p {
   margin-right: 8px;
 }
 #section1 {
-  background-image: url(../img/index_img/img2.png);
+  background-image: url(http://ic.game.com/img/index_img/img2.png);
+  -webkit-background-size: cover;
+  background-size: cover;
 }
 #section1 .w {
   position: relative;
@@ -298,7 +300,7 @@ p {
   left: -48px;
 }
 #section2 {
-  background-image: url(../img/index_img/img3.png);
+  background-image: url(http://ic.game.com/img/index_img/img3.png);
   background-size: cover;
 }
 #section2 .w {
@@ -369,7 +371,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
 }
 #section3 .w .info1 {
   font-size: 20px;
@@ -379,7 +380,7 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
+  width: 800px;
 }
 #section3 .w .info2 {
   font-size: 20px;
@@ -389,13 +390,12 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
+  width: 609px;
 }
 #section3 .w .coin {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   top: 247px;
 }
 #section3 .w .coin .b {
@@ -450,7 +450,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   top: 539px;
   font-size: 23px;
   color: #FED006;
@@ -460,12 +459,12 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   font-size: 14px;
   top: 583px;
   text-align: center;
   color: #ccc;
   font-weight: 100;
+  width: 537px;
 }
 #section4 {
   background-color: #212124;
@@ -477,7 +476,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   top: 69px;
   font-size: 48px;
 }
@@ -485,11 +483,10 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   width: 910px;
   height: 482px;
   top: 136px;
-  background-image: url(../img/table/tb.png);
+  background-image: url(http://ic.game.com/img/table/tb.png);
   background-size: cover;
 }
 #section4 .w .charts .tc {
@@ -546,16 +543,16 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   top: 630px;
   font-size: 12px;
   color: #ccc;
   font-weight: 100;
   text-align: center;
+  width: 500px;
 }
 #section5 {
   position: relative;
-  background: url("../img/index_img/img4.png");
+  background: url("http://ic.game.com/img/index_img/img4.png");
   background-size: cover;
 }
 #section5 .w {
@@ -652,36 +649,42 @@ p {
 }
 #section5 .route .st1 .info2 {
   color: #82D5BE;
+  width: 72px;
 }
 #section5 .route .st2 {
   left: 100px;
 }
 #section5 .route .st2 .info2 {
   color: #84DBBD;
+  width: 176px;
 }
 #section5 .route .st3 {
   left: 256px;
 }
 #section5 .route .st3 .info2 {
   color: #82D5CB;
+  width: 122px;
 }
 #section5 .route .st4 {
   left: 350px;
 }
 #section5 .route .st4 .info2 {
   color: #77CCD3;
+  width: 344px;
 }
 #section5 .route .st5 {
   left: 490px;
 }
 #section5 .route .st5 .info2 {
   color: #75B9E1;
+  width: 234px;
 }
 #section5 .route .st6 {
   left: 808px;
 }
 #section5 .route .st6 .info2 {
   color: #8786C8;
+  width: 266px;
 }
 #section5 .route .st7 {
   left: 1061px;
@@ -689,6 +692,7 @@ p {
 }
 #section5 .route .st7 .info2 {
   color: #C26BE6;
+  width: 266px;
 }
 #section6 {
   background-image: linear-gradient(45deg, #3533E8 0%, #27ADFF 100%);
@@ -836,7 +840,7 @@ p {
   margin-top: 10px;
 }
 #section6 .w .container .text .li li {
-  list-style: square outside url("../img/whitepage/dot.png");
+  list-style: square outside url("http://ic.game.com/img/whitepage/dot.png");
 }
 #section6 .w .container .t1 div {
   display: block;
@@ -866,7 +870,7 @@ p {
 }
 #section7 .w {
   position: absolute;
-  background: url(../img/whitepage/bg.png) no-repeat;
+  background: url(http://ic.game.com/img/whitepage/bg.png) no-repeat;
   background-size: cover;
   height: 596px;
   width: 928px;
@@ -915,7 +919,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   top: 41px;
   font-weight: 200;
   color: #A8ACB9;
@@ -925,7 +928,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   font-size: 48px;
   color: #333;
   top: 73px;
@@ -935,7 +937,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   top: 230px;
   width: 100%;
   height: 467px;
@@ -957,24 +958,24 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
 }
 #section8 .w .abU ul li .i2 {
   font-size: 16px;
   top: 274px;
   color: #4F5362;
+  text-align: center;
 }
 #section8 .w .abU ul li .i3 {
   font-size: 12px;
   color: #333333;
   top: 304px;
   font-weight: 100;
+  text-align: center;
 }
 #section8 .w .abU ul li .i4 {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   width: 200px;
   font-size: 12px;
   line-height: 24px;
@@ -993,7 +994,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   font-size: 48px;
   top: 25px;
   color: #333333;
@@ -1005,7 +1005,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   top: 127px;
   font-weight: 200;
   vertical-align: baseline;
@@ -1020,7 +1019,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   top: 242px;
 }
 #section9 .info2 .t {
@@ -1048,7 +1046,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   color: #333;
   top: 622px;
   font-weight: 200;
@@ -1060,7 +1057,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   font-size: 48px;
   top: 60px;
   color: #333333;
@@ -1069,7 +1065,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   color: #333333;
   top: 240px;
   height: 397px;
@@ -1113,9 +1108,12 @@ p {
 }
 #section11 {
   background-color: #F5F5F5;
+  overflow-y: scroll;
+  height: 100%;
 }
 #section11 .tableCell {
   height: 755px !important;
+  overflow-y: scroll;
 }
 #section11 .tableCell .container1 {
   width: 100%;
@@ -1139,7 +1137,7 @@ p {
 }
 #section11 .tableCell .container1 .wa .info2 {
   position: absolute;
-  width: max-content;
+  width: 720px;
   left: 50%;
   transform: translateX(-50%);
   top: 197px;
@@ -1193,7 +1191,6 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: max-content;
   top: 34px;
   z-index: 100;
 }
