--- a/css/index.less
+++ b/css/index.less
@@ -821,46 +821,46 @@
 //第八屏
 #section7 {
   background-color: #fff;
-  position: relative;
-  .w {
-    position: absolute;
-    background: url(http://ic.game.com/img/whitepage/bg.png) no-repeat;
-    background-size: cover;
-    height: 596px;
-    width: 928px;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    .title {
-      position: absolute;
-      font-size: 48px;
-      left: 74px;
-      top: 161px;
-      line-height: 67px;
-      font-weight: 500;
-    }
-    .info {
-      font-weight: 100;
-      position: absolute;
-      left: 74px;
-      top: 232px;
-      font-size: 14px;
-      width: 425px;
-      line-height: 30px;
-    }
-    .btn {
-      font-weight: 200;
-      position: absolute;
-      width: 160px;
-      height: 48px;
-      border-radius: 24px;
-      background-color: #FF0850;
-      box-shadow: 0 1px 0px #FF5886;
-      font-size: 24px;
-      text-align: center;
-      line-height: 48px;
-      left: 74px;
-      top: 418px;
+  .tableCell {
+    vertical-align: top;
+    .w {
+      position: relative;
+      background: url(http://ic.game.com/img/whitepage/bg.png) no-repeat;
+      background-size: cover;
+      height: 596px;
+      width: 928px;
+      margin-top: 45px;
+      .title {
+        position: absolute;
+        font-size: 48px;
+        left: 74px;
+        top: 161px;
+        line-height: 67px;
+        font-weight: 500;
+      }
+      .info {
+        font-weight: 100;
+        position: absolute;
+        left: 74px;
+        top: 232px;
+        font-size: 14px;
+        width: 425px;
+        line-height: 30px;
+      }
+      .btn {
+        font-weight: 200;
+        position: absolute;
+        width: 160px;
+        height: 48px;
+        border-radius: 24px;
+        background-color: #FF0850;
+        box-shadow: 0 1px 0px #FF5886;
+        font-size: 24px;
+        text-align: center;
+        line-height: 48px;
+        left: 74px;
+        top: 418px;
+      }
     }
   }
 }
@@ -1050,11 +1050,11 @@
 
 #section11 {
   background-color: #F5F5F5;
-  overflow-y: scroll;
+  //overflow-y: scroll;
   height: 100%;
   .tableCell {
     height: 755px !important;
-    overflow-y: scroll;
+    //overflow-y: scroll;
     .container1 {
       width: 100%;
       height: 100%;
@@ -1113,7 +1113,7 @@
           }
         }
         .footer {
-          height: 400px;
+          height: 422px;
           width: 100%;
           position: absolute;
           bottom: 0;
