--- a/css/index.css
+++ b/css/index.css
@@ -937,7 +937,7 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 230px;
+  top: 185px;
   width: 100%;
   height: 467px;
 }
@@ -1116,7 +1116,7 @@ p {
 #section11 .tableCell .container1 {
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 #section11 .tableCell .container1 .wa {
   margin: 0 auto;
