--- a/css/index_copy.less
+++ b/css/index_copy.less
@@ -45,7 +45,6 @@
           display: block;
           color: #fff;
           font-weight: 300;
-          font-size: 12px;
           &:hover {
             background-color: transparent;
           }
@@ -144,16 +143,15 @@
       font-size: 24px;
       text-align: center;
       line-height: 48px;
+      display: inline-block;
+      margin-top: 20px;
       font-weight: 200;
       cursor: pointer;
-      margin: 20px auto 0 auto;
       box-shadow: 0 4px 8px 0 rgba(255,0,74,0.4);
     }
 
     .share {
-      overflow: hidden;
-      display: inline-block;
-      padding-top: 3%;
+      margin-top: 55px;
 
       a {
         margin-left: 8px;
@@ -888,7 +886,7 @@
     }
     .abU {
       .center();
-      top: 175px;
+      top: 185px;
       width: 100%;
       height: 467px;
       ul {
@@ -1060,7 +1058,7 @@
     .container1 {
       width: 100%;
       height: 100%;
-      overflow-y: scroll;
+      overflow-y: auto;
       .wa {
         margin: 0 auto;
         text-align: center;
@@ -1115,7 +1113,7 @@
           }
         }
         .footer {
-          height: 400px;
+          height: 422px;
           width: 100%;
           position: absolute;
           bottom: 0;
@@ -1167,7 +1165,7 @@
   position: absolute;
   left: 50%;
   margin-left: -19px;
-  top: 92%;
+  top: 680px;
 }
 
 //动画
