--- a/css/index.css
+++ b/css/index.css
@@ -77,12 +77,10 @@ p {
   height: 100% !important;
   overflow: hidden;
 }
-#section0 {
-  background-color: skyblue;
-}
 #section0 #canvas {
   width: 100%;
   height: 100%;
+  background-image: linear-gradient(to right, #3e23ff 0%, #ff2362 100%);
 }
 #section0 .canvas-content {
   width: 100%;
@@ -216,7 +214,7 @@ p {
   margin-right: 8px;
 }
 #section1 {
-  background-image: url(http://ic.game.com/img/index_img/img2.png);
+  background-image: url(http://ic.game.com/img/index_img/img2.jpg);
   -webkit-background-size: cover;
   background-size: cover;
 }
@@ -302,7 +300,7 @@ p {
   left: -48px;
 }
 #section2 {
-  background-image: url(http://ic.game.com/img/index_img/img3.png);
+  background-image: url(http://ic.game.com/img/index_img/img3.jpg);
   background-size: cover;
 }
 #section2 .w {
@@ -365,6 +363,7 @@ p {
 }
 #section3 .w {
   position: relative;
+  margin-top: -20px;
 }
 #section3 .w .title {
   font-size: 48px;
@@ -473,6 +472,7 @@ p {
 }
 #section4 .w {
   position: relative;
+  margin-top: -70px;
 }
 #section4 .w .title {
   position: absolute;
@@ -552,9 +552,12 @@ p {
   text-align: center;
   width: 500px;
 }
+#section4 .next {
+  margin-top: 35px;
+}
 #section5 {
   position: relative;
-  background: url("http://ic.game.com/img/index_img/img4.png");
+  background: url("http://ic.game.com/img/index_img/img4.jpg");
   background-size: cover;
 }
 #section5 .w {
@@ -566,6 +569,7 @@ p {
   top: 60px;
   left: 50%;
   transform: translateX(-50%);
+  margin-top: -25px;
 }
 #section5 .w .info {
   font-size: 18px;
@@ -594,7 +598,7 @@ p {
 #section5 .route {
   height: 200px;
   position: absolute;
-  top: 392px;
+  top: 360px;
 }
 #section5 .route .wl {
   position: absolute;
@@ -703,6 +707,8 @@ p {
   position: relative;
   width: 787px;
   height: 100%;
+  padding-bottom: 10px;
+  margin-top: -70px;
 }
 #section6 .w .title {
   position: absolute;
@@ -874,7 +880,7 @@ p {
 }
 #section7 .tableCell .w {
   position: relative;
-  background: url(http://ic.game.com/img/whitepage/bg.png) no-repeat;
+  background: url(http://ic.game.com/img/whitepage/bg.jpg) no-repeat;
   background-size: cover;
   height: 596px;
   width: 928px;
@@ -1113,12 +1119,15 @@ p {
   height: 100%;
 }
 #section11 .tableCell {
-  height: 755px !important;
+  display: block;
+  overflow: hidden;
 }
 #section11 .tableCell .container1 {
   width: 100%;
-  height: 100%;
-  overflow-y: scroll;
+  height: 105%;
+  box-sizing: content-box;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 #section11 .tableCell .container1 .wa {
   margin: 0 auto;
