--- a/css/index_t.css
+++ b/css/index_t.css
@@ -77,12 +77,10 @@ p {
   height: 100% !important;
   overflow: hidden;
 }
-#section0 {
-  background-color: skyblue;
-}
 #section0 #canvas {
   width: 100%;
   height: 100%;
+  background-image: linear-gradient(to right, #3e23ff 0%, #ff2362 100%);
 }
 #section0 .canvas-content {
   width: 100%;
@@ -96,7 +94,7 @@ p {
   line-height: 100px;
   text-align: center;
   display: inline-block;
-  background: url(http://ic.game.com/img/index_img/icon-nav.png) no-repeat;
+  background: url(../img/index_img/icon-nav.png) no-repeat;
   background-position-x: 14px;
   background-position-y: 48px;
   transition: all 1s;
@@ -113,6 +111,7 @@ p {
   display: block;
   color: #fff;
   font-weight: 300;
+  font-size: 12px;
 }
 #section0 .canvas-content .nav1 li a:hover {
   background-color: transparent;
@@ -200,21 +199,22 @@ p {
   font-size: 24px;
   text-align: center;
   line-height: 48px;
-  display: inline-block;
-  margin-top: 20px;
   font-weight: 200;
   cursor: pointer;
+  margin: 20px auto 0 auto;
   box-shadow: 0 4px 8px 0 rgba(255, 0, 74, 0.4);
 }
 #section0 .canvas-content .share {
-  margin-top: 55px;
+  overflow: hidden;
+  display: inline-block;
+  padding-top: 3%;
 }
 #section0 .canvas-content .share a {
   margin-left: 8px;
   margin-right: 8px;
 }
 #section1 {
-  background-image: url(http://ic.game.com/img/index_img/img2.png);
+  background-image: url(../img/index_img/img2.jpg);
   -webkit-background-size: cover;
   background-size: cover;
 }
@@ -300,7 +300,7 @@ p {
   left: -48px;
 }
 #section2 {
-  background-image: url(http://ic.game.com/img/index_img/img3.png);
+  background-image: url(../img/index_img/img3.jpg);
   background-size: cover;
 }
 #section2 .w {
@@ -363,6 +363,7 @@ p {
 }
 #section3 .w {
   position: relative;
+  margin-top: -20px;
 }
 #section3 .w .title {
   font-size: 48px;
@@ -471,6 +472,7 @@ p {
 }
 #section4 .w {
   position: relative;
+  margin-top: -70px;
 }
 #section4 .w .title {
   position: absolute;
@@ -486,7 +488,7 @@ p {
   width: 910px;
   height: 482px;
   top: 136px;
-  background-image: url(http://ic.game.com/img/table/tb.png);
+  background-image: url(../img/table/tb.png);
   background-size: cover;
 }
 #section4 .w .charts .tc {
@@ -550,9 +552,12 @@ p {
   text-align: center;
   width: 500px;
 }
+#section4 .next {
+  margin-top: 35px;
+}
 #section5 {
   position: relative;
-  background: url("http://ic.game.com/img/index_img/img4.png");
+  background: url("../img/index_img/img4.jpg");
   background-size: cover;
 }
 #section5 .w {
@@ -564,6 +569,7 @@ p {
   top: 60px;
   left: 50%;
   transform: translateX(-50%);
+  margin-top: -25px;
 }
 #section5 .w .info {
   font-size: 18px;
@@ -592,7 +598,7 @@ p {
 #section5 .route {
   height: 200px;
   position: absolute;
-  top: 392px;
+  top: 360px;
 }
 #section5 .route .wl {
   position: absolute;
@@ -701,6 +707,8 @@ p {
   position: relative;
   width: 787px;
   height: 100%;
+  padding-bottom: 10px;
+  margin-top: -70px;
 }
 #section6 .w .title {
   position: absolute;
@@ -840,7 +848,7 @@ p {
   margin-top: 10px;
 }
 #section6 .w .container .text .li li {
-  list-style: square outside url("http://ic.game.com/img/whitepage/dot.png");
+  list-style: square outside url("../img/whitepage/dot.png");
 }
 #section6 .w .container .t1 div {
   display: block;
@@ -872,7 +880,7 @@ p {
 }
 #section7 .tableCell .w {
   position: relative;
-  background: url(http://ic.game.com/img/whitepage/bg.png) no-repeat;
+  background: url(../img/whitepage/bg.jpg) no-repeat;
   background-size: cover;
   height: 596px;
   width: 928px;
@@ -937,7 +945,7 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 185px;
+  top: 175px;
   width: 100%;
   height: 467px;
 }
@@ -1111,12 +1119,15 @@ p {
   height: 100%;
 }
 #section11 .tableCell {
-  height: 755px !important;
+  display: block;
+  overflow: hidden;
 }
 #section11 .tableCell .container1 {
   width: 100%;
-  height: 100%;
-  overflow-y: auto;
+  height: 105%;
+  box-sizing: content-box;
+  overflow: scroll;
+  overflow-x: hidden;
 }
 #section11 .tableCell .container1 .wa {
   margin: 0 auto;
@@ -1172,7 +1183,7 @@ p {
   margin-right: 0;
 }
 #section11 .tableCell .container1 .wa .footer {
-  height: 422px;
+  height: 400px;
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -1219,7 +1230,7 @@ p {
   position: absolute;
   left: 50%;
   margin-left: -19px;
-  top: 680px;
+  top: 92%;
 }
 @keyframes zhuan {
   from {
