--- a/css/index_20170831_1447.less
+++ b/css/index_20170831_1447.less
@@ -10,6 +10,11 @@
 .section {
   height: 100% !important;
   overflow: hidden;
+  display: block !important;
+}
+
+.tableCell {
+  display: block !important;
 }
 
 //第一屏
@@ -84,10 +89,10 @@
     }
 
     .buy {
+      margin-top: 54px;
       ul {
         text-align: center;
         display: inline-block;
-        margin-top: 54px;
         li {
           text-align: center;
           width: 72px;
@@ -336,7 +341,7 @@
       display: inline-block;
       font-weight: 100;
       .center();
-      width:800px;
+      width:805px;
     }
     .info2 {
       font-size: 20px;
@@ -422,7 +427,7 @@
   background-color: #212124;
   .w {
     position: relative;
-    margin-top: -70px;
+    margin-top: -45px;
     .title {
       .center();
       top: 69px;
@@ -496,9 +501,6 @@
       text-align: center;
       width: 500px;
     }
-  }
-  .next {
-    margin-top: 35px;
   }
 }
 
@@ -657,7 +659,7 @@
     width: 787px;
     height: 100%;
     padding-bottom: 10px;
-    margin-top: -70px;
+    margin-top: -30px;
     .title {
       position: absolute;
       font-size: 48px;
