--- a/css/index_20170901_1700.css
+++ b/css/index_20170901_1700.css
@@ -369,7 +369,6 @@ p {
 }
 #section3 .w {
   position: relative;
-  margin-top: -20px;
 }
 #section3 .w .title {
   font-size: 48px;
@@ -380,24 +379,24 @@ p {
   transform: translateX(-50%);
 }
 #section3 .w .info1 {
+  text-align: center;
   font-size: 20px;
   top: 150px;
-  display: inline-block;
   font-weight: 100;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: 805px;
+  width: 100%;
 }
 #section3 .w .info2 {
+  text-align: center;
   font-size: 20px;
   top: 188px;
   font-weight: 100;
-  display: inline-block;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: 609px;
+  width: 100%;
 }
 #section3 .w .coin {
   position: absolute;
@@ -471,20 +470,19 @@ p {
   text-align: center;
   color: #ccc;
   font-weight: 100;
-  width: 537px;
+  width: 100%;
 }
 #section4 {
   background-color: #212124;
 }
 #section4 .w {
   position: relative;
-  margin-top: -45px;
 }
 #section4 .w .title {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 69px;
+  top: 39px;
   font-size: 48px;
 }
 #section4 .w .charts {
@@ -493,7 +491,7 @@ p {
   transform: translateX(-50%);
   width: 910px;
   height: 482px;
-  top: 136px;
+  top: 106px;
   background-image: url(http://ic.game.com/img/table/tb.png);
   background-size: cover;
 }
@@ -551,7 +549,7 @@ p {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 630px;
+  top: 600px;
   font-size: 12px;
   color: #ccc;
   font-weight: 100;
@@ -711,7 +709,6 @@ p {
   width: 787px;
   height: 100%;
   padding-bottom: 10px;
-  margin-top: -30px;
 }
 #section6 .w .title {
   position: absolute;
@@ -878,16 +875,15 @@ p {
 #section7 {
   background-color: #fff;
 }
-#section7 .tableCell {
-  vertical-align: top;
-}
 #section7 .tableCell .w {
-  position: relative;
+  position: absolute;
   background: url(http://ic.game.com/img/whitepage/bg.jpg) no-repeat;
   background-size: cover;
   height: 596px;
   width: 928px;
-  margin-top: 45px;
+  left: 50%;
+  top: 40px;
+  transform: translateX(-50%);
 }
 #section7 .tableCell .w .title {
   position: absolute;
