--- a/css/index_20170901_1700.less
+++ b/css/index_20170901_1700.less
@@ -39,7 +39,7 @@
       line-height: 100px;
       text-align: center;
       display: inline-block;
-      background: url(http://ic.game.com/img/index_img/icon-nav.png) no-repeat;
+      background: url(https://ic.game.com/img/index_img/icon-nav.png) no-repeat;
       background-position-x: 14px;
       background-position-y: 48px;
       transition: all 1s;
@@ -174,7 +174,7 @@
 
 //第二屏
 #section1 {
-  background-image: url(http://ic.game.com/img/index_img/img2.jpg);
+  background-image: url(https://ic.game.com/img/index_img/img2.jpg);
   -webkit-background-size: cover;
   background-size: cover;
   .w {
@@ -263,7 +263,7 @@
 
 //第三屏
 #section2 {
-  background-image: url(http://ic.game.com/img/index_img/img3.jpg);
+  background-image: url(https://ic.game.com/img/index_img/img3.jpg);
   background-size: cover;
   .w {
     height: 100%;
@@ -436,7 +436,7 @@
       width: 910px;
       height: 482px;
       top: 106px;
-      background-image: url(http://ic.game.com/img/table/tb.png);
+      background-image: url(https://ic.game.com/img/table/tb.png);
       background-size: cover;
       .tc {
         position: absolute;
@@ -505,7 +505,7 @@
 //第六屏
 #section5 {
   position: relative;
-  background: url("http://ic.game.com/img/index_img/img4.jpg");
+  background: url("https://ic.game.com/img/index_img/img4.jpg");
   background-size: cover;
   .w {
     position: relative;
@@ -798,7 +798,7 @@
           margin-left: 17px;
           margin-top: 10px;
           li {
-            list-style: square outside url("http://ic.game.com/img/whitepage/dot.png");
+            list-style: square outside url("https://ic.game.com/img/whitepage/dot.png");
           }
         }
       }
@@ -837,7 +837,7 @@
   .tableCell {
     .w {
       position: absolute;
-      background: url(http://ic.game.com/img/whitepage/bg.jpg) no-repeat;
+      background: url(https://ic.game.com/img/whitepage/bg.jpg) no-repeat;
       background-size: cover;
       height: 596px;
       width: 928px;
